--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type-check": "vue-tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "pinia": "^2.3.1",
     "url": "^0.11.4",
     "vue": "^3.5.13"
   },
@@ -27,6 +29,8 @@
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.8.8",
+    "sass": "^1.83.4",
+    "sass-embedded": "^1.83.4",
     "typescript": "~4.9.5",
     "vite": "^5.0.12",
     "vite-plugin-checker": "^0.6.2",
