--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "lint-without-fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --ignore-path .gitignore",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --fix --ignore-path .gitignore",
+    "lint-without-fix": "eslint . --ext .vue,.js,.ts --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.ts --fix --ignore-path .gitignore",
     "type-check": "vue-tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
@@ -28,10 +27,11 @@
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-vue": "^9.3.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.8.8",
     "sass": "^1.83.4",
     "sass-embedded": "^1.83.4",
-    "typescript": "~4.9.5",
+    "typescript": "~5.0.4",
     "vite": "^5.0.12",
     "vite-plugin-checker": "^0.6.2",
     "vue-eslint-parser": "^9.3.2",
