--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
     "lint-without-fix": "eslint . --ext .vue,.js,.ts --ignore-path .gitignore",
     "lint": "eslint . --ext .vue,.js,.ts --fix --ignore-path .gitignore",
     "type-check": "vue-tsc --project tsconfig.json --noEmit"
