--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "build": "vite build",
     "lint-without-fix": "eslint . --ext .vue,.js,.ts --ignore-path .gitignore",
     "lint": "eslint . --ext .vue,.js,.ts --fix --ignore-path .gitignore",
-    "type-check": "vue-tsc --project tsconfig.json --noEmit"
+    "type-check": "vue-tsc --project tsconfig.json --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "pinia": "^2.3.1",
+    "ts-jest": "^29.3.4",
     "url": "^0.11.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.7",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.0",
     "@types/vue-router": "^2.0.0",
@@ -26,11 +32,15 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.7.0",
+    "@vue/vue3-jest": "^29.2.6",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-vue": "^9.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
     "prettier": "^2.8.8",
     "sass": "^1.83.4",
